helm-convert/chaos-mesh-validation-validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
  name: chaos-mesh-validation
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: chaos-mesh-controller-manager
      namespace: default
      path: /validate-pingcap-com-v1alpha1-podchaos
  failurePolicy: Fail
  name: vpodchaos.kb.io
  rules:
  - apiGroups:
    - pingcap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - podchaos
- clientConfig:
    caBundle: Cg==
    service:
      name: chaos-mesh-controller-manager
      namespace: default
      path: /validate-pingcap-com-v1alpha1-iochaos
  failurePolicy: Fail
  name: viochaos.kb.io
  rules:
  - apiGroups:
    - pingcap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - iochaos
- clientConfig:
    caBundle: Cg==
    service:
      name: chaos-mesh-controller-manager
      namespace: default
      path: /validate-pingcap-com-v1alpha1-timechaos
  failurePolicy: Fail
  name: vtimechaos.kb.io
  rules:
  - apiGroups:
    - pingcap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - timechaos
- clientConfig:
    caBundle: Cg==
    service:
      name: chaos-mesh-controller-manager
      namespace: default
      path: /validate-pingcap-com-v1alpha1-networkchaos
  failurePolicy: Fail
  name: vnetworkchaos.kb.io
  rules:
  - apiGroups:
    - pingcap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - networkchaos
- clientConfig:
    caBundle: Cg==
    service:
      name: chaos-mesh-controller-manager
      namespace: default
      path: /validate-pingcap-com-v1alpha1-kernelchaos
  failurePolicy: Fail
  name: vkernelchaos.kb.io
  rules:
  - apiGroups:
    - pingcap.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kernelchaos
